tests/buildstructor/fail/unknown_naming.stderr
error: builder 'entry' name cannot be derived for 'hmm' and must be specified via annotation #[builder(entry = "<name>")]
 --> tests/buildstructor/fail/unknown_naming.rs:8:5
  |
8 |     #[builder]
  |     ^

error: builder 'entry' name cannot be derived for 'do_phone_call' and must be specified via annotation #[builder(entry = "<name>")]
  --> tests/buildstructor/fail/unknown_naming.rs:14:5
   |
14 |     #[builder]
   |     ^
